--- a/app/views/shared/_pinned_pages_menu.html.erb
+++ b/app/views/shared/_pinned_pages_menu.html.erb
@@ -2,7 +2,7 @@
   data-controller="pinned-pages-menu"
   data-pinned-pages-menu-hidden-class="pointer-events-none scale-75 opacity-0"
   data-pinned-pages-menu-visible-class="pointer-events-auto scale-100 opacity-100"
-  class="flex justify-end mt-4 mr-4 relative md:hidden z-50"
+  class="flex justify-end mt-4 mr-4 relative md:hidden"
 >
   <!-- Button to toggle the menu -->
   <button type="button" class="btn-dark btn-muted size-10 rounded-full grid place-items-center" data-action="mousedown->pinned-pages-menu#toggle">
