--- a/app/views/errors/503.html.erb
+++ b/app/views/errors/503.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, '503 Service Unavailable' %>
 
-<section class="grid h-screen place-items-center px-4">
+<section class="grid h-screen place-items-center">
   <div class="text-center">
     <div class="flex flex-col items-center justify-center gap-3 opacity-35 dark:opacity-25">
       <%= inline_svg_tag 'icons/server.svg', class: 'size-14' %>
