--- a/app/views/errors/502.html.erb
+++ b/app/views/errors/502.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, '502 Bad Gateway' %>
 
-<section class="grid h-screen place-items-center px-4">
+<section class="grid h-screen place-items-center">
   <div class="text-center">
     <div class="flex flex-col items-center justify-center gap-3 text-rose-500/75">
       <%= inline_svg_tag 'icons/link-slash.svg', class: 'size-14' %>
