--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "Run • #{format_date(@run.date)}" %>
 
-<div class="max-w-3xl px-4 mx-auto my-16">
+<div class="max-w-3xl mx-auto my-16">
   <%= render 'turbo_run', run: @run %>
 </div>
