--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, 'Search' %>
 
-<div class="mx-auto my-16 max-w-3xl px-4">
+<div class="mx-auto my-16 max-w-3xl">
   <div class="mb-24">
     <div class="mt-10 pb-6">
       <h1 class="heading">Search</h1>
