--- a/app/views/teams/member.html.erb
+++ b/app/views/teams/member.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "#{@member.default_name} • #{@team.name}" %>
 
-<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl px-4 mx-auto my-16">
+<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl mx-auto my-16">
   <div class="mb-12">
     <div class="mb-6 text-center">
       <h2 class="subheading my-1"><%= @member.default_name %> &amp; <%= @team.name %></h2>
