--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, 'New Team' %>
 
-<div class="max-w-3xl px-4 mx-auto my-16">
+<div class="max-w-3xl mx-auto my-16">
   <div class="pb-6 mb-4 border-b border-slate-200 dark:border-slate-700">
     <h1 class="heading">New Team</h1>
   </div>
