--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
       <%= f.label :email, class: 'form-label' %>
       <div class="relative">
         <%= inline_svg_tag 'icons/envelope.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-input pl-10', data: { form_validation_target: 'email', action: 'input->form-validation#validateEmail' } %>
+        <%= f.email_field :email, autofocus: true, autocomplete: 'email', placeholder: 'Enter your email', class: 'form-input pl-10', data: { form_validation_target: 'email', action: 'input->form-validation#validateEmail' } %>
       </div>
       <p class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</p>
     </div>
@@ -26,7 +26,7 @@
       <%= f.label :username, class: 'form-label' %>
       <div class="relative">
         <%= inline_svg_tag 'icons/user.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-        <%= f.text_field :username, autocomplete: 'username', class: 'form-input pl-10', data: { form_validation_target: 'username', action: 'input->form-validation#validateUsername' } %>
+        <%= f.text_field :username, autocomplete: 'username', placeholder: 'Create a username', class: 'form-input pl-10', data: { form_validation_target: 'username', action: 'input->form-validation#validateUsername' } %>
       </div>
       <p class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</p>
     </div>
@@ -35,7 +35,7 @@
       <%= f.label :password, class: 'form-label' %>
       <div data-controller="password-visibility" class="relative">
         <%= inline_svg_tag 'icons/lock.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-        <%= f.password_field :password, autocomplete: 'new-password', class: 'form-input pl-10', data: { form_validation_target: 'password', action: 'input->form-validation#validatePassword input->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements', password_visibility_target: 'password' } %>
+        <%= f.password_field :password, autocomplete: 'new-password', placeholder: 'Create a password', class: 'form-input pl-10', data: { form_validation_target: 'password', action: 'input->form-validation#validatePassword input->form-validation#validatePasswordConfirmation input->form-validation#showPasswordRequirements', password_visibility_target: 'password' } %>
 
         <button type="button" class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-500" data-action="password-visibility#toggle">
           <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-5' %>
@@ -79,7 +79,7 @@
       <%= f.label :password_confirmation, class: 'form-label' %>
       <div data-controller="password-visibility" class="relative">
         <%= inline_svg_tag 'icons/lock-check.svg', class: 'size-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-500' %>
-        <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-input pl-10', data: { form_validation_target: 'passwordConfirmation', action: 'input->form-validation#validatePasswordConfirmation', password_visibility_target: 'password' } %>
+        <%= f.password_field :password_confirmation, autocomplete: 'new-password', placeholder: 'Confirm your password', class: 'form-input pl-10', data: { form_validation_target: 'passwordConfirmation', action: 'input->form-validation#validatePasswordConfirmation', password_visibility_target: 'password' } %>
 
         <button type="button" class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-500" data-action="password-visibility#toggle">
           <%= inline_svg_tag 'icons/eye.svg', data: { password_visibility_target: 'visibleIcon' }, class: 'size-5' %>
