--- a/app/views/team_memberships/edit.html.erb
+++ b/app/views/team_memberships/edit.html.erb
@@ -19,7 +19,7 @@
             <span class="help-text">(optional)</span>
           </p>
         <% end %>
-        <%= form.number_field :mileage_goal, step: 1, min: 0, class: 'form-input', data: { form_validation_target: 'mileageGoal', action: 'input->form-validation#validateMileageGoal' } %>
+        <%= form.number_field :mileage_goal, step: 1, min: 0, placeholder: 'e.g., 100', class: 'form-input', data: { form_validation_target: 'mileageGoal', action: 'input->form-validation#validateMileageGoal' } %>
         <span class="hidden my-1 error-message" data-form-validation-target="milageGoalError">Personal mileage goal must be a positive number</span>
         <p class="my-1 help-text">Set a personal goal for how many miles you want to run during this team's season.</p>
       </div>
@@ -30,7 +30,7 @@
             <span class="help-text">(optional)</span>
           </p>
         <% end %>
-        <%= form.number_field :long_run_goal, step: 1, min: 0, class: 'form-input', data: { form_validation_target: 'mileageGoal', action: 'input->form-validation#validateMileageGoal' } %>
+        <%= form.number_field :long_run_goal, step: 1, min: 0, placeholder: 'e.g., 20', class: 'form-input', data: { form_validation_target: 'mileageGoal', action: 'input->form-validation#validateMileageGoal' } %>
         <span class="hidden my-1 error-message" data-form-validation-target="milageGoalError">Long run goal must be a positive number</span>
         <p class="my-1 help-text">Set a personal goal for how many long runs you want to run during this team's season.</p>
       </div>
