--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -59,7 +59,7 @@
   }
 
   .card {
-    @apply p-6 rounded-xl bg-slate-50 dark:bg-slate-800/60 shadow-md dark:shadow-none border dark:border-slate-700;
+    @apply p-4 sm:p-6 rounded-xl bg-slate-50 dark:bg-slate-800/60 shadow-md dark:shadow-none border dark:border-slate-700;
   }
 
   .dropdown-toggle {
