--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -37,7 +37,7 @@
         role="dialog"
         tabindex="-1"
         data-modal-target="modal"
-        class="modal opacity-0 pointer-events-none"
+        class="modal opacity-0 scale-75 pointer-events-none"
       >
         <div class="flex flex-col space-y-1.5 text-center sm:text-left">
           <h2 class="text-lg font-semibold leading-none tracking-tight">Unlink Google Account?</h2>
@@ -361,7 +361,7 @@
     role="dialog"
     tabindex="-1"
     data-modal-target="modal"
-    class="modal opacity-0 pointer-events-none"
+    class="modal opacity-0 scale-75 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
       <h2 class="text-lg font-semibold leading-none tracking-tight">Sign Out?</h2>
@@ -392,7 +392,7 @@
     role="dialog"
     tabindex="-1"
     data-modal-target="modal"
-    class="modal opacity-0 pointer-events-none"
+    class="modal opacity-0 scale-75 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
       <h2 class="text-lg font-semibold leading-none tracking-tight">End All Other Sessions?</h2>
@@ -423,7 +423,7 @@
     role="dialog"
     tabindex="-1"
     data-modal-target="modal"
-    class="modal opacity-0 pointer-events-none"
+    class="modal opacity-0 scale-75 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
       <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Account?</h2>
