--- a/app/views/runs/_actions_dropdown.html.erb
+++ b/app/views/runs/_actions_dropdown.html.erb
@@ -57,7 +57,7 @@
     role="dialog"
     tabindex="-1"
     data-modal-target="modal"
-    class="modal opacity-0 pointer-events-none"
+    class="modal opacity-0 scale-75 pointer-events-none"
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
       <h2 class="text-lg font-semibold leading-none tracking-tight">Delete Run?</h2>
