--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -1,6 +1,6 @@
 <% run_user = run.user %>
 
-<div class="card p-4 my-6">
+<div class="card my-6">
   <div class="flex items-start gap-2 mb-4">
     <%= link_to local_assigns[:team] ? team_member_path(team, run_user) : user_path(run_user), data: { turbo: false }, class: 'group flex items-center gap-3 flex-grow' do %>
       <%= render 'shared/user_photo', user: run_user, size: :xs %>
@@ -77,10 +77,10 @@
 
     <div class="max-lg:space-y-2 lg:flex items-center justify-between pt-4 border-t dark:border-slate-700">
       <div class="flex items-center gap-2 text-soft text-xs">
-        <time class="text-soft text-xs whitespace-nowrap" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted: <%= format_date(run.created_at) %></time>
+        <time class="whitespace-nowrap" datetime="<%= run.created_at.to_formatted_s(:long) %>">Posted: <%= format_date(run.created_at) %></time>
         <% if run.edited? %>
           <span>•</span>
-          <time class="text-soft text-xs whitespace-nowrap" datetime="<%= run.updated_at.to_formatted_s(:long) %>">Edited: <%= format_date(run.updated_at) %></time>
+          <time class="whitespace-nowrap" datetime="<%= run.updated_at.to_formatted_s(:long) %>">Edited: <%= format_date(run.updated_at) %></time>
         <% end %>
       </div>
 
