--- a/app/views/teams/shared/_leave_team_modal.html.erb
+++ b/app/views/teams/shared/_leave_team_modal.html.erb
@@ -15,13 +15,13 @@
 >
   <div class="flex flex-col space-y-1.5 text-center sm:text-left">
     <h2 class="text-lg font-semibold leading-none tracking-tight">Leave Team?</h2>
-    <p class="text-soft text-sm">Are you sure you want to leave the team <span class="font-bold"><%= @team.name %></span>? You will have to send a new join request if you want to rejoin.</p>
+    <p class="text-soft text-sm">Are you sure you want to leave the team <span class="font-bold"><%= team.name %></span>? You will have to send a new join request if you want to rejoin.</p>
   </div>
 
   <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
     <button data-action="mousedown->modal#close" data-modal-id="leaveTeam" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Stay on team</button>
     <%= button_to 'Leave team',
-                  leave_team_path(@team),
+                  leave_team_path(team),
                   data: { turbo: false },
                   class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
     %>
