--- a/app/views/teams/show/_member.html.erb
+++ b/app/views/teams/show/_member.html.erb
@@ -1,12 +1,19 @@
-<div class="card">
-  <div class="flex items-start gap-4">
-    <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex items-start gap-4 flex-1' do %>
-      <%= render 'shared/user_photo', user: member, size: :sm %>
+<div
+  data-controller="modal"
+  data-modal-hide-modal-class="opacity-0 scale-75 pointer-events-none"
+  data-modal-show-modal-class="opacity-100 scale-100 pointer-events-auto"
+  data-modal-hide-backdrop-class="opacity-0 pointer-events-none"
+  data-modal-show-backdrop-class="opacity-100 pointer-events-auto"
+  class="card"
+>
+  <div class="flex flex-wrap-reverse items-end gap-3">
+    <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex items-center gap-3 flex-1' do %>
+      <%= render 'shared/user_photo', user: member, size: :xs, icon_background: :darker %>
 
-      <div class="flex-1">
-        <p class='text-lg font-bold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500'>
+      <div class="flex-1 leading-tight">
+        <p class='font-bold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500'>
           <%= member.default_name %>
-          <%= content_tag(:span, (member == current_user ? '(You)' : (member.owns?(team) ? '(Coach)' : nil)), class: 'text-soft text-xs') if member == current_user || member.owns?(team) %>
+          <%= content_tag(:span, '(You)', class: 'font-normal text-soft text-xs') if member == current_user %>
         </p>
 
         <%= content_tag(:p, member.username, class: 'text-soft text-sm') if member.display_name.present? %>
@@ -15,8 +22,59 @@
 
     <% if current_user.owns?(team) && member != current_user %>
       <div class="shrink-0">
-        <%= button_to 'Remove from team', remove_member_team_path(team_id: team.id, user_id: member.id), method: :post, class: 'btn-link-destructive text-xs', data: { confirm: 'Are you sure you want to remove this member?' } %>
+        <button data-action="mousedown->modal#open" data-modal-id="removeMember" class="btn btn-sm btn-destructive btn-muted whitespace-nowrap">
+          Remove
+        </button>
+
+        <!-- Remove Member Modal Backdrop -->
+        <div
+          data-modal-target="backdrop"
+          data-modal-id="removeMember"
+          data-action="mousedown->modal#backdropClose"
+          class="modal-backdrop opacity-0 pointer-events-none"></div>
+
+        <!-- Remove Member Modal -->
+        <div
+          id="removeMember"
+          role="dialog"
+          tabindex="-1"
+          data-modal-target="modal"
+          class="modal opacity-0 scale-75 pointer-events-none"
+        >
+          <div class="flex flex-col space-y-1.5 text-center sm:text-left">
+            <h2 class="text-lg font-semibold leading-none tracking-tight">Remove Team Member?</h2>
+            <p class="text-soft text-sm">Are you sure you want to remove <span class="font-bold"><%= member.default_name %></span> from the team <span class="font-bold"><%= team.name %></span>? <%= member.first_name %> will have to send a new join request if <%= member.gender_subject %> <%= member.gender? ? 'wants' : 'want' %> to rejoin.</p>
+          </div>
+
+          <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
+            <button data-action="mousedown->modal#close" data-modal-id="removeMember" type="button" class="btn btn-dark btn-muted mt-2 sm:mt-0">Nevermind</button>
+            <%= button_to "Remove #{member.default_name}",
+                          remove_member_team_path(team_id: team.id, user_id: member.id),
+                          method: :post,
+                          class: 'btn btn-destructive font-bold w-full whitespace-nowrap'
+            %>
+          </div>
+
+          <button data-action="mousedown->modal#close" type="button" data-modal-id="removeMember" class="modal-x-btn">
+            <%= inline_svg_tag 'icons/x-mark.svg', class: 'size-4' %>
+            <span class="sr-only">Close</span>
+          </button>
+        </div>
       </div>
     <% end %>
+  </div>
+
+  <div class="mt-4 pt-4 border-t dark:border-slate-700 flex items-end justify-between">
+    <div class="flex items-start gap-1.5 flex-1">
+      <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4 text-soft shrink-0' %>
+      <p class="text-soft text-xs">
+        <% if member.owns?(team) %>
+          <%= "Coach of #{team.name}" %>
+        <% else %>
+          <% team_membership = member.team_memberships.find_by(team: team) %>
+          <%= "Member since #{pretty_date(team_membership.created_at.to_date, date_style: :absolute)}" %>
+        <% end %>
+      </p>
+    </div>
   </div>
 </div>
