--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
-  <%= link_to user, data: { turbo: false }, class: 'group flex items-start gap-4 flex-1' do %>
-    <%= render 'shared/user_photo', user: user, size: :sm %>
+  <%= link_to user, data: { turbo: false }, class: 'group flex items-center gap-3' do %>
+    <%= render 'shared/user_photo', user: user, size: :xs, icon_background: :darker %>
 
     <div class="flex-1">
       <p class='text-lg font-bold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500'>
@@ -12,24 +12,26 @@
     </div>
   <% end %>
 
-  <% coach_check = user != current_user && user.any_owned_teams_in_common?(current_user) %>
-  <% member_check = user != current_user && user.any_membered_teams_in_common?(current_user) %>
+  <% if user != current_user %>
+    <% coach_teams = user.owned_teams_in_common(current_user) %>
+    <% member_teams = user.membered_teams_in_common(current_user) %>
 
-  <% if coach_check || member_check %>
-    <div class="mt-4 space-y-2 border-t pt-4 dark:border-slate-700">
-      <% if coach_check %>
-        <div class="flex items-start gap-1.5">
-          <%= inline_svg_tag 'icons/user.svg', class: 'size-4 text-soft shrink-0' %>
-          <p class="text-soft text-xs">Coach of: <%= list(items: user.owned_teams_in_common(current_user).map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
-        </div>
-      <% end %>
+    <% if coach_teams.any? || member_teams.any? %>
+      <div class="mt-4 space-y-2 border-t pt-4 dark:border-slate-700">
+        <% if coach_teams.any? %>
+          <div class="flex items-start gap-1.5">
+            <%= inline_svg_tag 'icons/user.svg', class: 'size-4 text-soft shrink-0' %>
+            <p class="text-soft text-xs">Coach of: <%= list(items: coach_teams.map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
+          </div>
+        <% end %>
 
-      <% if member_check %>
-        <div class="flex items-start gap-1.5">
-          <%= inline_svg_tag 'icons/team.svg', class: 'size-4 text-soft shrink-0' %>
-          <p class="text-soft text-xs">Member of: <%= list(items: user.membered_teams_in_common(current_user).map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
-        </div>
-      <% end %>
-    </div>
+        <% if member_teams.any? %>
+          <div class="flex items-start gap-1.5">
+            <%= inline_svg_tag 'icons/user-group.svg', class: 'size-4 text-soft shrink-0' %>
+            <p class="text-soft text-xs">Member of: <%= list(items: member_teams.map { |team| link_to(team.name, team, data: { turbo: false }, class: 'btn-link') }).html_safe %></p>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
   <% end %>
 </div>
