--- a/app/views/teams/show/_join_request.html.erb
+++ b/app/views/teams/show/_join_request.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-slate-50/85 dark:bg-slate-800/85 divide-y rounded-lg border p-4 shadow backdrop-blur-sm dark:divide-slate-700 dark:border-slate-700 dark:shadow-none">
   <div class="flex items-center gap-3">
     <%= link_to request.user, class: 'group flex items-center gap-3 flex-1' do %>
-      <%= render 'shared/user_photo', user: request.user, size: :xs %>
+      <%= render 'shared/user_photo', user: request.user, size: :xs, icon_background: :darker %>
 
       <div class="flex-1">
         <p class="font-bold transition duration-200 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= request.user.default_name %></p>
