style(progress_bar): adjust progress bar background color

--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -18,7 +18,7 @@
       <% end %>
     </div>
   </div>
-  <div class="<%= size_classes[size] %> w-full bg-indigo-200 dark:bg-slate-700 relative"
+  <div class="<%= size_classes[size] %> w-full bg-slate-200 dark:bg-slate-700 relative shadow-inner dark:shadow-none"
        role="progressbar"
        aria-valuenow="<%= percentage %>"
        aria-valuemin="0"
