--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -24,15 +24,15 @@
   <% if team.season_dates? %>
     <div class="block mb-4 space-y-3 lg:space-y-0 lg:flex lg:flex-wrap lg:items-center lg:justify-around lg:gap-4">
       <div class="lg:text-center">
-        <p class="text-soft text-sm leading-none">Start Date</p>
-        <p class="text-2xl font-semibold leading-none">
+        <p class="text-soft text-sm leading-tight">Start Date</p>
+        <p class="text-2xl font-semibold leading-tight">
           <%= pretty_date(team.season_start_date, month_format: :short, date_style: :absolute) %>
         </p>
       </div>
 
       <div class="lg:text-center">
-        <p class="text-soft text-sm leading-none">End Date</p>
-        <p class="text-2xl font-semibold leading-none">
+        <p class="text-soft text-sm leading-tight">End Date</p>
+        <p class="text-2xl font-semibold leading-tight">
           <%= pretty_date(team.season_end_date, month_format: :short, date_style: :absolute) %>
         </p>
       </div>
